right side changed grid systm.
used grid on right side.. n upvote button added
left side add issue and issue font size increased
and width of the whole container 1 is decreased a lil bit.

--- a/work.html
+++ b/work.html
@@ -18,33 +18,42 @@
       
       <img src="questionmark4.png" class="imagelogo">
         <div class="name">ISSUE BOOK</div>
-        <div class="leftbox">ADD ISSUE</div>
-        <div class="leftbox">ISSUES</div>
+       <div class="leftbox"> <a class="alinks" href=".\addissues.html">ADD ISSUE</a></div>
+        <div class="leftbox"> <a href="#" class="alinks">ISSUES</a></div>
 
     </div>
     <div class="rightside">
-      <div class="box"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis distinctio maiores voluptates reprehenderit, provident officiis velit aperiam? Unde dicta voluptate quod modi vitae alias consectetur, hic maiores sit recusandae error?</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis aperiam culpa quia repellendus, laudantium laboriosam vel porro illo omnis blanditiis odio, placeat optio rerum maxime magnam reiciendis quis non cupiditate?</div>
-      <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est iure, modi cumque minima iste dicta reprehenderit. Obcaecati excepturi voluptates ea ratione totam inventore commodi velit. Sapiente nemo aperiam dolor?</div>
-      <div class="box">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tenetur maiores velit vel. Fugiat similique culpa officia dolorum impedit et fugit, eaque est quia ab expedita rem perspiciatis animi iste.</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusantium sapiente quae odio, nostrum blanditiis vel alias a ut, magni incidunt rem quibusdam quam magnam aperiam atque! Reiciendis, qui mollitia!</div>
-      <div class="box"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis distinctio maiores voluptates reprehenderit, provident officiis velit aperiam? Unde dicta voluptate quod modi vitae alias consectetur, hic maiores sit recusandae error?</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis aperiam culpa quia repellendus, laudantium laboriosam vel porro illo omnis blanditiis odio, placeat optio rerum maxime magnam reiciendis quis non cupiditate?</div>
-      <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est iure, modi cumque minima iste dicta reprehenderit. Obcaecati excepturi voluptates ea ratione totam inventore commodi velit. Sapiente nemo aperiam dolor?</div>
-      <div class="box">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tenetur maiores velit vel. Fugiat similique culpa officia dolorum impedit et fugit, eaque est quia ab expedita rem perspiciatis animi iste.</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusantium sapiente quae odio, nostrum blanditiis vel alias a ut, magni incidunt rem quibusdam quam magnam aperiam atque! Reiciendis, qui mollitia!</div>
-      <div class="box"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis distinctio maiores voluptates reprehenderit, provident officiis velit aperiam? Unde dicta voluptate quod modi vitae alias consectetur, hic maiores sit recusandae error?</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis aperiam culpa quia repellendus, laudantium laboriosam vel porro illo omnis blanditiis odio, placeat optio rerum maxime magnam reiciendis quis non cupiditate?</div>
-      <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est iure, modi cumque minima iste dicta reprehenderit. Obcaecati excepturi voluptates ea ratione totam inventore commodi velit. Sapiente nemo aperiam dolor?</div>
-      <div class="box">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tenetur maiores velit vel. Fugiat similique culpa officia dolorum impedit et fugit, eaque est quia ab expedita rem perspiciatis animi iste.</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusantium sapiente quae odio, nostrum blanditiis vel alias a ut, magni incidunt rem quibusdam quam magnam aperiam atque! Reiciendis, qui mollitia!</div>
-      <div class="box"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis distinctio maiores voluptates reprehenderit, provident officiis velit aperiam? Unde dicta voluptate quod modi vitae alias consectetur, hic maiores sit recusandae error?</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis aperiam culpa quia repellendus, laudantium laboriosam vel porro illo omnis blanditiis odio, placeat optio rerum maxime magnam reiciendis quis non cupiditate?</div>
-      <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus est iure, modi cumque minima iste dicta reprehenderit. Obcaecati excepturi voluptates ea ratione totam inventore commodi velit. Sapiente nemo aperiam dolor?</div>
-      <div class="box">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus tenetur maiores velit vel. Fugiat similique culpa officia dolorum impedit et fugit, eaque est quia ab expedita rem perspiciatis animi iste.</div>
-      <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusantium sapiente quae odio, nostrum blanditiis vel alias a ut, magni incidunt rem quibusdam quam magnam aperiam atque! Reiciendis, qui mollitia!</div>
-     
-
+      <div class="grid-container">
+      <div class="box">
+      <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+      </div>
+      <div class="box">
+        <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+        </div>
+        <div class="box">
+          <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+          </div>
+          <div class="box">
+            <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+            </div>
+            <div class="box">
+              <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+              </div>
+              <div class="box">
+                <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+                </div>
+                <div class="box">
+                  <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+                  </div>
+                  <div class="box">
+                    <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+                    </div>
+                    <div class="box">
+                      <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+                      </div>
+                      <div class="box">
+                        <div class="innerbox1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet dolorum, consequatur fuga placeat vero, culpa adipisci exercitationem reiciendis sed et dignissimos, nam consectetur laboriosam illo minus eos molestias possimus?</div><div class="innerbox2"><button>Upvote</button></div>
+                        </div>
     </div>
 
     <script src="" async defer></script>
